force-app/main/default/objects/Account/fields/Dietary_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirements__c</fullName>
    <label>Dietary Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Halal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>