force-app/main/default/objects/Account/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <description>Attendee QR Code</description>
    <formula>IMAGE(&apos;https://quickchart.io/qr?size=200&amp;text=&apos;+Id ,&apos;Scan QR code from mobile.&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Attendee QR Code</inlineHelpText>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>