force-app/main/default/objects/Account/fields/Webassessor_Email__c.field-meta.xml
<CustomField>
    <fullName>Webassessor_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Webassessor Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>