force-app/main/default/objects/Account/fields/Webassessor_LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>Webassessor_LinkedIn_URL__c</fullName>
    <label>Webassessor/LinkedIn URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>